[package]
name = "prob-check-repo"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.2"
hex = "0.4.3"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_with = "3.6.1"
toml = "0.8.10"
