[package]
name = "prob-check-repo"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bisection = "0.1.0"
blake3 = "1.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive"] }
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.9.0"
toml = "0.8.16"
